<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>org.etd.framework</groupId>
    <artifactId>etd-framework-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>


    <name>etd-framework-parent</name>
    <description>EasyToDevelop（ETD)框架</description>


    <properties>
        <java.version>21</java.version>
        <spring.boot.version>3.5.16</spring.boot.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <etd.framework.version>0.0.1-SNAPSHOT</etd.framework.version>
    </properties>

    <modules>
        <module>demo</module>
        <module>etd-framework-commons</module>
        <module>etd-framework-starter</module>
        <module>etd-framework-dependencies</module>
        <module>etd-business-parent</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
